--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*{
+    margin:0rem;
+    padding:0rem;
+    box-sizing:border-box;
+}
+
 .input-div{
     display: flex;
     flex-direction: row;
@@ -9,10 +15,26 @@ display:flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
-margin-top: 1rem;
+position:absolute;
+margin-left:4rem;
+margin-top:4.5rem;
+background-color: #f5f5f5;
+padding:1rem;
+border:2px solid #ccc;
+box-shadow: 0px 1px 3px #ccc;
 }
 
 .input-label{
     margin-right: 2rem;
     width: 4rem;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+@media(max-width:1000px){
+    .inputs-div{
+        position:relative;
+        margin-left:0rem;
+        margin-top:1rem;
+    }
 }
