--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,150 @@
-*{
-    margin:0rem;
-    padding:0rem;
-    box-sizing:border-box;
+* {
+    margin: 0rem;
+    padding: 0rem;
+    box-sizing: border-box;
 }
 
-.input-div{
+
+
+.inputs-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media(max-width:1000px) {
+    .inputs-div {
+        position: relative;
+        margin-left: 0rem; 
+    }
+}
+
+input {
+    text-align: center;
+
+    color: #757575;
+    font-size: calc(24px + 46 * ((100vw - 600px) / 800));;
+}
+
+.navigation-bar{
     display: flex;
     flex-direction: row;
-    margin-bottom: 1rem;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1vw;
+    font-size: calc(40px + 46 * ((40vw - 600px) / 800));
 }
 
-.inputs-div{
-display:flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-position:absolute;
-margin-left:4rem;
-margin-top:4.5rem;
-background-color: #f5f5f5;
-padding:1rem;
-border:2px solid #ccc;
-box-shadow: 0px 1px 3px #ccc;
+
+.home-button{
+    color: #8E44AD!important;
 }
 
-.input-label{
-    margin-right: 2rem;
-    width: 4rem;
-    font-weight: 700;
-    font-size: 1.2rem;
+a{
+    text-decoration: none!important;
+    color: #E91E63!important;
+    font-weight: 400;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-@media(max-width:1000px){
-    .inputs-div{
-        position:relative;
-        margin-left:0rem;
-        margin-top:1rem;
-    }
+.emoji{
+    font-size: calc(40px + 46 * ((30vw - 600px) / 800));
+    margin-left: 1vw;
+}
+
+.app-name{
+    background: -webkit-linear-gradient(#880E4F, #F06292);
+    font-weight: 600;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.light-app-name{
+    font-size: calc(3vw);
+    font-weight: 400;
+}
+
+.pieces-column{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 1vw;
+}
+
+.pieces-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.last-piece{
+    background-color: #C51162!important;
+}
+.piece{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1vw;
+    margin-bottom: 1vw;
+    width: 3vw;
+    height: 3vw;
+    border-radius: 9%;
+    background-color: #E91E63;
+    color: white;
+    font-size: 1vw;
+}
+.solved{
+    background-color: #4CAF50!important;
+}
+
+.initial-vs-solved{
+    display: flex;
+    flex-direction: column;
+    align-items: space-around;
+    justify-content: space-around;
+}
+
+
+.cut-line{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1vw;
+    height: calc(9vw);
+    font-size: calc(1vw);
+    border-left: 2px solid black;
+}
+
+.full-piece-div{
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: center;
+    font-size: 2vw;
+    opacity: 87%;
+    border-top: 1px solid #ededed;
+    padding:1vw;
+}
+
+.cut-number{
+    font-size: calc(1.5vw);
+    font-weight: 600;
+    margin-left: 1vw;
+
+}
+
+.piece-label{
+    display: flex;
+    justify-self: flex-end;
+    font-size: calc(1.5vw);
+    font-weight: 600;
+    margin-left: 1vw;
 }
